# memewiki

./: .gitignore  README.md  app.py  memewiki.db  pyproject.toml
memewiki/: __init__.py  __main__.py  app.py
memewiki/controller/: __init__.py  imageboard.py  login.py  meme.py  memebase.py  signup.py
memewiki/models/: db.py  imageboard.py  meme.py  memebase.py  midia.py  thread.py  user.py
memewiki/routes/: home_bp.py  imageboard.py  imageboard_bp.py  login_bp.py  logout_bp.py  meme_bp.py  memebase_bp.py  memes_bp.py  signup_bp.py
memewiki/security/: captcha.py
memewiki/services/: imageboard.py  meme.py  memebase.py  midia.py  user.py
memewiki/static/: style.css
memewiki/templates/: base.html  home.html  login.html  signup.html
memewiki/templates/imageboard/: create.html  index.html  thread.html
memewiki/templates/memebase/: create.html  memesbase.html
memewiki/templates/memes/: meme.html  memes.html
memewiki/view/: imageboard.py  login.py  meme.py  memebase.py  signup.py
tests/: test_memewiki.py
