[tool.poetry]
name = "memewiki"
version = "0.1.0"
description = ""
authors = ["gp2112 <me@guip.dev>"]

[tool.poetry.scripts]
memewiki = "memewiki.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.0.14"
Flask = "^2.1.2"
psycopg2 = "^2.9.3"
captcha = "^0.4"
jinja-markdown = "^1.210911"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
